# online-fitness-store-P

./: .gitignore  .replit  DEPLOY_NOW.md  DEPLOY_STEPS.md  DOWNLOAD_BACKUP.ps1  Dockerfile  NGINX_QUICK_START.md  NGINX_SETUP.md  README.md  backup_postgres.py  diagnose_database.py  docker-compose.prod.yml  fix_media_permissions.sh  pyproject.toml  requirements.txt  test_db_connection.py  test_products.py
accounts/: adapters.py  forms.py  urls.py  views.py
cart/: apps.py  context_processors.py  models.py  signals.py  urls.py  utils.py  views.py
cart/migrations/: 0002_alter_cartitem_options_alter_cartitem_product_and_more.py
core/: admin.py  admin_urls.py  admin_views.py  models.py  urls.py  views.py
core/migrations/: 0005_featuredproductscontent.py
dashboard/: models.py  urls.py  views.py
django_project/: settings.py  urls.py
docs/: AWS_DEPLOYMENT.md  CODE_DOCUMENTATION.md  DATABASE_SETUP.md  DOCKER_SETUP.md  EMAIL_VERIFICATION.md  HTTPS_SETUP.md  PICKUP_LOCATION_SETUP.md  PROJECT_STRUCTURE.md  README.md  REFACTORING_SUMMARY.md
home/: views.py
members/: admin.py  apps.py  forms.py  models.py  signals.py  urls.py  views.py
nginx/: nginx.conf
orders/: admin.py  forms.py  models.py  services.py  urls.py  views.py  views_downloads.py  views_orders.py
payment/: forms.py  urls.py  views.py
products/: admin.py  forms.py  models.py  urls.py  views.py
profiles/: apps.py  forms.py  models.py  signals.py  urls.py  views.py
templates/: base.html
tools/: README.md  backup_postgres.py  diagnose_database.py  test_db_connection.py  test_products.py
(+67 files in other folders)
